basic setup for airtime pro

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -45,3 +45,10 @@ section {
 	padding: 0.5rem;
 	background-color: #eee;
 }
+
+.button {
+	margin: 1rem;
+	padding: 0.5em 1em;
+	border: 1px solid currentColor;
+	border-radius: 2em;
+}
